8365673: Incorrect number of cores are reported on Ryzen CPU

Reviewed-by: dholmes, kvn